test/compiler_errors/include-target-missing-element.lzx
<!-- include target is missing an element; should result in compilation error -->
<canvas>
  <include href="target-missing-element.lzx"/>
</canvas>
<!-- * X_LZ_COPYRIGHT_BEGIN ***************************************************
* Copyright 2001-2004 Laszlo Systems, Inc.  All Rights Reserved.              *
* Use is subject to license terms.                                            *
* X_LZ_COPYRIGHT_END ****************************************************** -->
